updating data model and application code to use it

--- a/app/views/logdetail.html
+++ b/app/views/logdetail.html
@@ -1,2 +1,6 @@
 <h2>log detail</h2>
 <div>Log detail [{{testvarslogdetail}}]</div>
+<div>item detail [{{logItemId}}]</div>
+<div>item id: [{{logItemData.id}}]</div>
+<div>item title: [{{logItemData.title}}]</div>
+<div>item description: [{{logItemData.description}}]</div>
