--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,31 +2,13 @@
 <p>{{testvarshome}}</p>
 
 <ul class="table-view">
-  <li class="table-view-cell media">
-    <a href="#/logdetail" class="navigate-right">
+  <li ng-repeat="item in logData" class="table-view-cell media">
+    <a href="#/logdetail/{{item.id}}" class="navigate-right">
       <img class="media-object pull-left" src="http://placehold.it/42x42">
       <div class="media-body">
-        Item 1
-        <p>Lorem ipsum dolor</p>
+        {{item.title}}
+        <p>{{item.description}}</p>
       </div>
-    </a>
-  </li>
-  <li class="table-view-cell media">
-    <a href="#/logdetail" class="navigate-right">
-      <img class="media-object pull-left" src="http://placehold.it/42x42">
-      <div class="media-body">
-        Item 1
-		<p>Lorem ipsum dolor</p>      
-	  </div>
-    </a>
-  </li>
-  <li class="table-view-cell media">
-    <a href="#/logdetail" class="navigate-right">
-      <img class="media-object pull-left" src="http://placehold.it/42x42">
-      <div class="media-body">
-        Item 1
-		<p>Lorem ipsum dolor</p>      
-	  </div>
     </a>
   </li>
 </ul>
