--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,6 +1,8 @@
 <h2>home</h2>
 <p>{{testvarshome}}</p>
 
+<div>mapoptions:[{{mapOptions2}}]</div>
+
 <ul class="table-view">
   <li ng-repeat="item in logData" class="table-view-cell media">
     <a href="#/logdetail/{{item.id}}" class="navigate-right">
