--- a/app/views/logdetail.html
+++ b/app/views/logdetail.html
@@ -1,6 +1,13 @@
 <h2>log detail</h2>
+
 <div>Log detail [{{testvarslogdetail}}]</div>
 <div>item detail [{{logItemId}}]</div>
-<div>item id: [{{logItemData.id}}]</div>
-<div>item title: [{{logItemData.title}}]</div>
-<div>item description: [{{logItemData.description}}]</div>
+<div>map data: [{{mapOptions}}]</div>
+
+<section id="map">
+	<div id="map_canvas" ui-map="myMap" 
+	style="height:300px;width:400px;border:2px solid #777777;margin:3px; border:1px solid" 
+	ui-options="mapOptions" 
+	ui-event="{'map-idle' : 'onMapIdle()'}">
+	</div>
+</section>
