--- a/app/views/newlog.html
+++ b/app/views/newlog.html
@@ -12,5 +12,5 @@
 	</div>
 	<div ui-map-marker="myMarkers"></div>
 </section>
-<div><button ng-click="startGpsRecord()">Start</button></div>
-<div><button ng-click="stopGpsRecord()">Stop</button></div>
+<div><button class="icon icon-play" ng-click="startGpsRecord()">Start</button></div>
+<div><button class="icon icon-pause" ng-click="stopGpsRecord()">Stop</button></div>
