--- a/app/views/newlog.html
+++ b/app/views/newlog.html
@@ -3,7 +3,7 @@
   <input type="text" placeholder="Title">
   <input type="date" placeholder="Date">
 </form>
-<div>GPS Status [{{gpsStatus[0]}}]</div>
+<p>GPS Status [{{gpsStatus[0]}}]</p>
 <section id="map">
 	<div id="map_canvas" ui-map="myMap" 
 	style="height:200px;width:295px;border:2px solid #777777;margin:3px; border:1px solid" 
