--- a/app/views/logdetail.html
+++ b/app/views/logdetail.html
@@ -6,17 +6,23 @@
     <input type="text" placeholder="51 km">
   </div>
   <div class="input-row">
-    <label>Time taken</label>
+    <label>Date</label>
+    <input type="text" placeholder="27/07/2014">
+  </div>
+  <div class="input-row">
+    <label>Time</label>
     <input type="text" placeholder="35 minutes">
   </div>
   <div class="input-row">
-    <label>Recorded on</label>
-    <input type="text" placeholder="27/07/2014">
+    <label>Started</label>
+    <input type="text" placeholder="16:05">
+  </div>
+  <div class="input-row">
+    <label>Ended</label>
+    <input type="text" placeholder="16:40">
   </div>
 </form>
-<div class="content-padded">
-	<p>Log start time: *todo*, end time: *todo*</p> 
-</div>
+
 <section id="map">
 	<div id="map_canvas" ui-map="myMap" 
 	style="height:200px;width:295px;border:2px solid #777777;margin:3px; border:1px solid" 
