--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,4 +1,5 @@
-<h2>home</h2>
+<!--<div class="content">-->
+<h2>home. This is an extra long title</h2>
 
 <ul class="table-view">
   <li ng-repeat="item in logData" class="table-view-cell media">
@@ -11,3 +12,4 @@
     </a>
   </li>
 </ul>
+<!--</div>-->
